--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- ios support -->
   <link rel="apple-touch-icon" href="/icons/icon-96x96.png">
   <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
+  <meta name="theme-color" content="#FFE1C4">
 </head>
 <body class="grey lighten-4">
 
