--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -10,7 +10,7 @@
   <link type="text/css" href="/css/styles.css" rel="stylesheet">
   <script type="text/javascript" src="/js/materialize.min.js"></script>
   <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="/icons/icon-96x96.png">
+  <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
   <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
   <meta name="theme-color" content="#FFE1C4">
 </head>
@@ -38,10 +38,10 @@
   </ul>
 
   <!-- content -->
-  <div class="container grey-text center">
-    <h5>OOPS!</h5>
-    <p>Currently you can't view this page without a connection.</p>
-    <a href="/" class="btn-small orange z-depth-0">Go to the Homepage</a>
+  <div class="container grey-text">
+    <h5 class="center">About Food Ninja</h5>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, porro voluptatum illum veniam eaque sunt sit labore provident eligendi! Voluptate amet suscipit inventore unde maxime atque impedit officia nobis laboriosam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptatibus omnis, ea doloremque exercitationem id necessitatibus. Voluptatem officiis cupiditate commodi totam, hic laborum est ducimus amet iure, non dignissimos illo.</p>
   </div>
 
   <script src="/js/app.js"></script>
