--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <div class="recipes container grey-text text-darken-1">
     <div class="card-panel recipe white row">
       <img src="img/dish.png" alt="recipe thumb">
+      <div class="recipe-edit">
+        <i class="material-icons">edit_outline</i>
+      </div>
       <div class="recipe-details">
         <div class="recipe-title">Edame Noodles</div>
         <div class="recipe-ingredients">Edame Beans, Noodels, Garlic oil</div>
