change db config

--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyDuDGcpHGU-Sx1Hla3wYwZvXbjeKpHqPjA",
-      authDomain: "net-ninja-pwa.firebaseapp.com",
-      databaseURL: "https://net-ninja-pwa.firebaseio.com",
-      projectId: "net-ninja-pwa",
-      storageBucket: "net-ninja-pwa.appspot.com",
-      messagingSenderId: "1008745109838"
+      apiKey: "AIzaSyDuJe2w5Ptc1AwM-Us-kWb2jYJuCr6UTOw",
+      authDomain: "angularfire-54a57.firebaseapp.com",
+      databaseURL: "https://angularfire-54a57.firebaseio.com",
+      projectId: "angularfire-54a57",
+      storageBucket: "angularfire-54a57.appspot.com",
+      messagingSenderId: "160774038322",
+      appId: "1:160774038322:web:02b3043149bddff2cfad2b",
+      measurementId: "G-DFVM5RFCXK"
     };
     firebase.initializeApp(config);
     const db = firebase.firestore();
