--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="z-depth-0 grey lighten-4">
     <div class="nav-wrapper container">
       <a href="#" class="brand-logo">
-        <img src="img/logo.svg" style="width: 180px; margin-top: 10px;">
+        <img src="https://www.google.com/search?q=logo&rlz=1C1GCEV_enCA917CA917&tbm=isch&source=iu&ictx=1&vet=1&fir=anzKS0A4Wzi6NM%252CxqICHFMKrhE4pM%252C_%253B-eDJED2XpumqjM%252CMUnsBNeVrAyn1M%252C_%253B26gNWzgDRxqo6M%252CNThFvsymDBmxOM%252C_%253BLWnZdfb3vSC-yM%252COrZljOIj6QhVEM%252C_%253BSOBdkXCF9ViRrM%252CkJKp39jOzj0uvM%252C_%253B1TrhrdO8NvbQ3M%252CtDwdjwygwP9k7M%252C_%253BC6mbfESS1zkCfM%252CEIqhu_9S4fuumM%252C_%253Bayg9MURcZMZ3gM%252C8YDYgmEEpo3viM%252C_%253BJxdeDCeuE69MGM%252CUCrBhJwJS7RHEM%252C_%253Bqr_Slvr4EuyRPM%252CONw1UlRUn0XHnM%252C_%253BYCDtydeVzDGXTM%252CRK3ZSaJBHbYjEM%252C_%253BllHv8b53-hQ8wM%252C-3Oig3ONyNTjqM%252C_%253BQQAuxAzGBnFkcM%252CGSgLCtA3jnVNYM%252C_%253BVcS5gF1jOxiLPM%252CjuSMhkdUxRGBJM%252C_&usg=AI4_-kRWDpIXUDZhlPFt2pSQSxBHC-ZR4Q&sa=X&ved=2ahUKEwisyJjWhPH2AhVLc98KHQ6VDFsQ9QF6BAgoEAE#imgrc=JxdeDCeuE69MGM" style="width: 180px; margin-top: 10px;">
       </a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger right">
       
