--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   
-  <script src="scripts/index.js"></script>
-  <script src="scripts/auth.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
