--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   </script>
    
   <script type="text/javascript">
-    let provider = new firebase.auth.GoogleAuthProvider('google.com');
+    let provider = new firebase.auth.GoogleAuthProvider();
     provider.addScope('profile');
     provider.addScope('email');
     // FirebaseUI config.
