--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@
           <label for="login-password">Your password</label>
         </div>
         <button class="btn yellow darken-2 z-depth-0">Login</button>
-        <hr>
-        <p>or</p>
-        <div id="firebaseui-auth-container"></div>        
+        
       </form>
+      <hr>
+        
+      <div id="firebaseui-auth-container"></div>       
+      <hr>
+      <button class="btn yellow darken-2 z-depth-0" id="Anonymous-loginn">Anonymously Login</button>
     </div>
   </div>
 
