--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         
       <div id="firebaseui-auth-container"></div>       
       <hr>
-      <button class="btn yellow darken-2 z-depth-0" id="Anonymously_login">Anonymously Login</button>
+      <button class="btn yellow darken-2 z-depth-0" id="Anon_login">Anonymously Login</button>
     </div>
   </div>
 
