--- a/index1.html
+++ b/index1.html
@@ -69,7 +69,7 @@
   </div>
 
   
-  <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-firestore.js"></script>
   <script>
     // Initialize Firebase
@@ -85,7 +85,7 @@
     };
     firebase.initializeApp(config);
     const db = firebase.firestore();
-  </script>
+  </script> -->
   <script src="/js/app.js"></script>
   <script src="/js/db.js"></script>
   <script src="/js/ui.js"></script>
