--- a/index1.html
+++ b/index1.html
@@ -70,8 +70,8 @@
 
   
   <!-- <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-firestore.js"></script>
-  <script>
+  <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-firestore.js"></script> -->
+ <!--  <script>
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyDuJe2w5Ptc1AwM-Us-kWb2jYJuCr6UTOw",
