--- a/afterLogin.html
+++ b/afterLogin.html
@@ -15,6 +15,7 @@
     <h1>Welcome to My Awesome App</h1>
     <div id="sign-in-status"></div>
     <div id="sign-in"></div>
+    <button class="btn yellow darken-2 z-depth-0" id="sign-out">Sign Out</button>
     <pre id="account-details"></pre>
 
     <script>
@@ -43,6 +44,7 @@
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
         // User is signed in.
+        document.getElementById('sign-out').style.display = 'block';
         var displayName = user.displayName;
         var email = user.email;
         var emailVerified = user.emailVerified;
@@ -68,6 +70,7 @@
         // User is signed out.
         document.getElementById('sign-in-status').textContent = 'Signed out';
         document.getElementById('sign-in').textContent = 'Sign in';
+        document.getElementById('sign-out').style.display = 'null';
         document.getElementById('account-details').textContent = 'null';
       }
     }, function(error) {
