--- a/afterLogin.html
+++ b/afterLogin.html
@@ -87,6 +87,7 @@
     firebase.auth().signOut().then(() => {
       // Sign-out successful./
       console.log('Sign out.');
+      window.location.replace("https://remarkable-hamster-be71c2.netlify.app/");
 
     }).catch((error) => {
       // An error happened.
