--- a/afterLogin.html
+++ b/afterLogin.html
@@ -68,6 +68,7 @@
         });
       } else {
         // User is signed out.
+        window.location.replace("https://remarkable-hamster-be71c2.netlify.app/");
         document.getElementById('sign-in-status').textContent = 'Signed out';
         document.getElementById('sign-in').textContent = 'Sign in';
         //document.getElementById('sign-out').style.display = 'null';
