--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       </script>
 
 <script type="text/javascript">
-    
+    var provider = new firebase.auth.GoogleAuthProvider();
+
     // FirebaseUI config.
     var uiConfig = {
       signInSuccessUrl: 'afterLogin.html',
