--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </script>
 
 <script type="text/javascript">
-    var provider = new firebase.auth.GoogleAuthProvider();
+    //var provider = new firebase.auth.GoogleAuthProvider();
 
     // FirebaseUI config.
     var uiConfig = {
