--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
         console.log('already login');
-        window.location.replace("https://remarkable-hamster-be71c2.netlify.app/afterlogin.html");
+        window.location.replace("https://quiet-genie-ff0807.netlify.app//afterlogin.html");
         // User is signed in.
         //document.getElementById('sign-out').style.display = 'block';
         /* var displayName = user.displayName;
