--- a/afterLogin.html
+++ b/afterLogin.html
@@ -9,7 +9,7 @@
        * TODO(DEVELOPER): Paste the initialization snippet from:
        * Firebase Console > Overview > Add Firebase to your web app. *
        ***************************************************************************************** -->
-    <title>Food Ninja</title>
+    <title>Firebase PWA</title>
     <!-- materialize icons, css & js -->
     <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -26,7 +26,7 @@
     <!-- top nav -->
     <nav class="z-depth-0">
       <div class="nav-wrapper container">
-        <a href="/">Food<span>James07</span></a>
+        <a href="/">Firebase PWA</a>
         <span class="right grey-text text-darken-1">
           <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
         </span>
@@ -35,7 +35,7 @@
 
     <!-- side nav -->
     <ul id="side-menu" class="sidenav side-menu">
-      <li><a class="subheader">FOODNINJA</a></li>
+      <li><a class="subheader">Firebase PWA</a></li>
       <li><a href="/" class="waves-effect">Home</a></li>
       <li><a href="/pages/about.html" class="waves-effect">About</a></li>
       <li><div class="divider"></div></li>
@@ -74,7 +74,7 @@
       </form>
     </div>
 
-    <h1>Welcome to My Awesome App</h1>
+    <h1>Firebase PWA</h1>
     <div id="sign-in-status"></div>
     <div id="sign-in"></div>
     <button class="btn yellow darken-2 z-depth-0" id="sign-out">Sign Out</button>
