--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <h1>Welcome to My Awesome App</h1>
+    <h1>Firebase PWA</h1>
     <div id="firebaseui-auth-container"></div>
 
     <script>
