--- a/afterLogin.html
+++ b/afterLogin.html
@@ -95,10 +95,10 @@
       
       // make auth and firestore references
       //const auth = firebase.auth();
-      //const db = firebase.firestore();
+      const db = firebase.firestore();
   
       // update firestore settings
-      //db.settings({ timestampsInSnapshots: true });
+      db.settings({ timestampsInSnapshots: true });
     </script>
 
     <script type="text/javascript">
