--- a/afterLogin.html
+++ b/afterLogin.html
@@ -75,11 +75,11 @@
     </div>
 
     <h1>Firebase PWA</h1>
-    <div id="sign-in-status"></div>
+    <!-- <div id="sign-in-status"></div>
     <div id="sign-in"></div>
+    
+    <pre id="account-details"></pre> -->
     <button class="btn yellow darken-2 z-depth-0" id="sign-out">Sign Out</button>
-    <pre id="account-details"></pre>
-
     <script>
       // Initialize Firebase
       var config = {
@@ -107,7 +107,7 @@
           if (user) {
             // User is signed in.
             //document.getElementById('sign-out').style.display = 'block';
-            var displayName = user.displayName;
+            /* var displayName = user.displayName;
             var email = user.email;
             var emailVerified = user.emailVerified;
             var photoURL = user.photoURL;
@@ -127,14 +127,14 @@
                 accessToken: accessToken,
                 providerData: providerData
               }, null, '  ');
-            });
+            }); */
           } else {
             // User is signed out.
             window.location.replace("https://quiet-genie-ff0807.netlify.app/");
-            document.getElementById('sign-in-status').textContent = 'Signed out';
+           /*  document.getElementById('sign-in-status').textContent = 'Signed out';
             document.getElementById('sign-in').textContent = 'Sign in';
             //document.getElementById('sign-out').style.display = 'null';
-            document.getElementById('account-details').textContent = 'null';
+            document.getElementById('account-details').textContent = 'null'; */
           }
         }, function(error) {
           console.log(error);
