--- a/afterLogin.html
+++ b/afterLogin.html
@@ -36,6 +36,7 @@
     <!-- side nav -->
     <ul id="side-menu" class="sidenav side-menu">
       <li><a class="subheader">Firebase PWA</a></li>
+      <li><a href="" class="waves-effect" id="sign-out">Sign out</a></li>
       <li><a href="/" class="waves-effect">Home</a></li>
       <li><a href="/pages/about.html" class="waves-effect">About</a></li>
       <li><div class="divider"></div></li>
@@ -74,12 +75,12 @@
       </form>
     </div>
 
-    <h1>Firebase PWA</h1>
+    
     <!-- <div id="sign-in-status"></div>
     <div id="sign-in"></div>
     
     <pre id="account-details"></pre> -->
-    <button class="btn yellow darken-2 z-depth-0" id="sign-out">Sign Out</button>
+    <!-- <button class="btn yellow darken-2 z-depth-0" id="sign-out">Sign Out</button> -->
     <script>
       // Initialize Firebase
       var config = {
