--- a/afterLogin.html
+++ b/afterLogin.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Firebase Store and auth PWA </title>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-store-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-store-compat.js"></script> -->
     <!-- *******************************************************************************************
        * TODO(DEVELOPER): Paste the initialization snippet from:
        * Firebase Console > Overview > Add Firebase to your web app. *
@@ -83,6 +83,9 @@
     
     <pre id="account-details"></pre> -->
     <!-- <button class="btn yellow darken-2 z-depth-0" id="sign-out">Sign Out</button> -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js"></script>
     <script>
       // Initialize Firebase
       var config = {
