--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     initApp = function() {
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
-        console.log('already login');
-        window.location.replace("https://quiet-genie-ff0807.netlify.app//afterlogin.html");
+        console.log('already login'+window.location.origin);
+        window.location.replace("https://majestic-sable-521f65.netlify.app");
         // User is signed in.
         //document.getElementById('sign-out').style.display = 'block';
         /* var displayName = user.displayName;
