--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
         console.log('already login'+window.location.origin);
-        window.location.replace("https://majestic-sable-521f65.netlify.app");
+        window.location.replace("https://majestic-sable-521f65.netlify.app/afterLogin.html");
         // User is signed in.
         //document.getElementById('sign-out').style.display = 'block';
         /* var displayName = user.displayName;
