--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   <body>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <h1>Firebase PWA</h1>
-    <div id="firebaseui-auth-container"></div>
-
+    <div class="container center">
+      <h1>Firebase PWA</h1>
+      <div id="firebaseui-auth-container"></div>
+    </div>
     <script>
         // Initialize Firebase
         var config = {
