--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
     <div class="container center">
-      <h1>Firebase PWA</h1>
+      <div class="recipes container grey-text text-darken-1">Firebase PWA Sign in</div>
       <div id="firebaseui-auth-container"></div>
     </div>
     <script>
