--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <div class="container center">
+    <div class="card-panel container center">
       <div class="recipes center container grey-text text-darken-3">Firebase PWA Sign in</div>
       <div id="firebaseui-auth-container"></div>
     </div>
