--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <body>
     <!-- top nav -->
   <nav class="z-depth-0">
-    <div class="nav-wrapper container">
+    <div class="nav-wrapper container center">
       <a href="">Firebase PWA Sign in</span></a>
       
     </div>
   </nav>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <div class="card-panel recipes container center">
+    <div class="card-panel recipes  center">
       
       <div id="firebaseui-auth-container"></div>
     </div>
