--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
   </nav>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <div class="card-panel recipes  center">
+  <div class="row">
+      <div class="col s12 m5">
+          <div class="card-panel teal">
       
-      <div id="firebaseui-auth-container"></div>
+            <div id="firebaseui-auth-container"></div>
+          </div>
+      </div>
     </div>
     <script>
         // Initialize Firebase
