--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
       
   </head class="grey lighten-4">
   <body>
-    <!-- top nav -->
-  <nav class="z-depth-0">
-    <div class="nav-wrapper container center">
-      <a href="">Firebase PWA Sign in</span></a>
-      
-    </div>
-  </nav>
+   
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
+
+         <div class="row">
+          <div class="col s12 m5">
+            <div class="card-panel teal">
+              <span class="white-text">Firebase PWA Sign in
+              </span>
+            </div>
+          </div>
+        </div>
   <div class="row">
       <div class="col s12 m5">
           <div class="card-panel teal">
