--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
 
-         <div class="row">
+         <div class="row center">
           <div class="col s12 m5">
             <div class="card-panel teal">
               <span class="white-text">Firebase PWA Sign in
