--- a/index-old.html
+++ b/index-old.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" href="/css/styles.css" rel="stylesheet">
     <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <link rel="manifest" href="/manifest.json">
 
     <!-- ios support -->
   <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
