--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@ if ('serviceWorker' in navigator) {
     .then(registration => listener.addRegistration(registration))
 
 }
+
+/* if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('/sw.js')
+    .then(reg => console.log('service worker registered'))
+    .catch(err => console.log('service worker not registered', err));
+} */
 </script>
 
 </body>
