--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
-        background: #221E34;
+        background: #f2f1f5;
     }
     
     #update-banner {
