--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ window['isUpdateAvailable']
 		if (isAvailable) {
 			/* 
              */
-            document.getElementById('update-banner').dataset.state = 'updateavailable';
+            document.getElementById('update-banner').dataset.state = 'updateavailable1';
             document.querySelector('#update-banner .headline').innerHTML = 'Update available';
             document.querySelector('#update-banner .subhead').innerHTML = 'Click here to update the app to the latest version';
         }
