--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="/manifest.json">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
     <title>My Web Application</title>
 </head>
 <style>
@@ -52,52 +49,10 @@
 
 
 
-<!-- <script src="ServiceWorkerUpdateListener.min.js"></script> -->
+<script src="ServiceWorkerUpdateListener.min.js"></script>
 <script>
-    // make the whole serviceworker process into a promise so later on we can
-    // listen to it and in case new content is available a toast will be shown
-    window.isUpdateAvailable = new Promise(function(resolve, reject) {
-        // lazy way of disabling service workers while developing
-        if ('serviceWorker' in navigator && ['localhost', '127'].indexOf(location.hostname) === -1) {
-            // register service worker file
-            navigator.serviceWorker.register('service-worker.js')
-                .then(reg => {
-                    reg.onupdatefound = () => {
-                        const installingWorker = reg.installing;
-                        installingWorker.onstatechange = () => {
-                            switch (installingWorker.state) {
-                                case 'installed':
-                                    if (navigator.serviceWorker.controller) {
-                                        // new update available
-                                        resolve(true);
-                                    } else {
-                                        // no update available
-                                        resolve(false);
-                                    }
-                                    break;
-                            }
-                        };
-                    };
-                })
-                .catch(err => console.error('[SW ERROR]', err));
-        }
-    });
-
-
-    // listen to the service worker promise in index.html to see if there has been a new update.
-// condition: the service-worker.js needs to have some kind of change - e.g. increment CACHE_VERSION.
-window['isUpdateAvailable']
-	.then(isAvailable => {
-		if (isAvailable) {
-			/* 
-             */
-            document.getElementById('update-banner').dataset.state = 'updateavailable1';
-            document.querySelector('#update-banner .headline').innerHTML = 'Update available';
-            document.querySelector('#update-banner .subhead').innerHTML = 'Click here to update the app to the latest version';
-        }
-	});
 // Check for Service Worker support
-/* if ('serviceWorker' in navigator) {
+if ('serviceWorker' in navigator) {
 
     // Create a new ServiceWorkerUpdateListener
     var listener = new ServiceWorkerUpdateListener();
@@ -118,9 +73,9 @@ window['isUpdateAvailable']
 
     // Register the service worker and add it to the listener
     navigator.serviceWorker.register('service-worker.js')
-    .then(registration => listener.addRegistration(registration)) 
+    .then(registration => listener.addRegistration(registration))
 
-}*/
+}
 
 
 </script>
